# feed_aggregator

./: .gitignore  .pre-commit-config.yaml  example.py  pyproject.toml
.github/workflows/: test.yml
src/feed_aggregator/: __init__.py  aggregators.py  composers.py  fetchers.py  parsers.py  serializers.py  utils.py
tests/cassettes/: test_aggregate.yaml
tests/test_feed_aggregator/: conftest.py  test_aggregators.py
