[project]
name = "feed_aggregator"
version = "0.1.0"
requires-python = ">=3.9,<4"
dependencies = [
    "feedparser>=6.0.10",
    "feedgen>=0.9.0",
    "pydantic[email]>=2.5.2",
    "httpx>=0.25.2",
]

[tool.pdm.dev-dependencies]
dev = ["pytest>=7.4.3", "pytest-vcr>=1.0.2", "pytest-cov>=4.1.0"]


[tool.black] # https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html
skip-string-normalization = 1

[tool.ruff]
line-length = 256
extend-select = [
    "W",   # pycodestyle Warning
    "I",   # isort
    "N",   # pep8-naming
    "S",   # flake8-bandit
    "PTH", # flake8-use-pathlib
    "PGH", # pygrep-hooks
    "TRY", # tryceratops
]
ignore = [
    "E501",   # line-too-long
    "S101",   # Use of `assert` detected
    "TRY003", # raise-vanilla-args
    "TRY400", # error-instead-of-exception
]

[tool.ruff.isort]
# https://beta.ruff.rs/docs/settings/#isort
force-single-line = true
lines-after-imports = 2


[tool.pytest.ini_options]
# https://docs.pytest.org/en/stable/reference/reference.html
# https://docs.pytest.org/en/stable/explanation/goodpractices.html
# https://docs.pytest.org/en/stable/example/pythoncollection.html
addopts = "-r fEsxX --disable-warnings --showlocals --tb=short --cov --cov-report=term --cov-report=html:./htmlcov"
